--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=attendacemanagement
+application.vendor=venne
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,10 +29,11 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/QR-Based_Attendance_Monitring_System.jar
+dist.jar=${dist.dir}/attendacemanagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/QR-Based_Attendance_Monitring_System
+dist.jlink.output=${dist.jlink.dir}/attendacemanagement
+endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout-RELEASE210.jar=lib\\AbsoluteLayout-RELEASE210.jar
 file.reference.bridj-0.6.2-windows-only.jar=lib\\bridj-0.6.2-windows-only.jar
@@ -39,11 +41,13 @@ file.reference.bridj-0.7.0.jar=lib\\bridj-0.7.0.jar
 file.reference.core-2.0.jar=lib\\core-2.0.jar
 file.reference.core-3.3.0.jar=lib\\core-3.3.0.jar
 file.reference.dx-1.7.jar=lib\\dx-1.7.jar
+file.reference.gson-2.10.1.jar=lib\\gson-2.10.1.jar
 file.reference.javase-2.0.jar=lib\\javase-2.0.jar
 file.reference.javase-3.3.0.jar=lib\\javase-3.3.0.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
 file.reference.mysql-connector-java-8.0.20.jar=lib\\mysql-connector-java-8.0.20.jar
+file.reference.opencv-490.jar=..\\..\\..\\..\\..\\Downloads\\opencv\\build\\java\\opencv-490.jar
 file.reference.slf4j-api-1.6.2.jar=lib\\slf4j-api-1.6.2.jar
 file.reference.slf4j-log4j12-1.6.2.jar=lib\\slf4j-log4j12-1.6.2.jar
 file.reference.webcam-capture-0.3.12.jar=lib\\webcam-capture-0.3.12.jar
@@ -56,14 +60,16 @@ javac.classpath=\
     ${file.reference.core-2.0.jar}:\
     ${file.reference.core-3.3.0.jar}:\
     ${file.reference.dx-1.7.jar}:\
+    ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.javase-2.0.jar}:\
     ${file.reference.javase-3.3.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar}:\
     ${file.reference.slf4j-api-1.6.2.jar}:\
     ${file.reference.slf4j-log4j12-1.6.2.jar}:\
-    ${file.reference.webcam-capture-0.3.12.jar}
+    ${file.reference.webcam-capture-0.3.12.jar}:\
+    ${file.reference.mysql-connector-java-8.0.20.jar}:\
+    ${file.reference.opencv-490.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,8 +78,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=23
-javac.target=23
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -98,8 +104,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=QR-Based_Attendance_Monitring_System
-main.class=qr.based.attendance.monitring.system.QRBasedAttendanceMonitringSystem
+jlink.launcher.name=attendacemanagement
+main.class=attendacemanagement.Attendacemanagement
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -110,7 +116,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Djava.library.path="C:\\Users\\venne\\Downloads\\opencv\\build\\java\\x64"
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
